--- a/Views/Doctors/New.cshtml
+++ b/Views/Doctors/New.cshtml
@@ -19,9 +19,13 @@
 
                                     @using (Html.BeginForm(actionName: "New", controllerName: "Doctors"))
                                     {
-                                       
-
-
+                                        
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.UserId, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+                                        <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                            @Html.TextBoxFor(m=>m.UserId,  new { @value=ViewBag.user, @readonly = "readonly" })
+                                        </div>
+                                    </div>
                                         @Html.DropDownListFor(m => m.LocationId, new SelectList(Model.Locations, "Value", "Text"), "Selectati Locatia", new { @class = "form - control" })
                                         <br />
 
