--- a/Views/Locations/Index.cshtml
+++ b/Views/Locations/Index.cshtml
@@ -3,8 +3,12 @@
     ViewBag.Title = "Index";
 }
 
+
 <br />
 <br />
+<div class="align-items-center justify-content-center align-content-center" style="text-align:center">
+    <h3>Lista locatii</h3>
+</div>
 <br />
 
 <table class="table align-middle table-striped">
