--- a/Views/Journals/New.cshtml
+++ b/Views/Journals/New.cshtml
@@ -17,11 +17,24 @@
                         <div class="card-body p-md-5">
                             <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Adaugare Intrare Jurnal </p>
                             <div class="row justify-content-center align-items-center align-content-center">
-                                
 
-                                    @using (Html.BeginForm(actionName: "New", controllerName: "Journals"))
-                                    {
-                                        <div class="align-items-center align-content-center">
+
+                                @using (Html.BeginForm(actionName: "New", controllerName: "Journals"))
+                                {
+                                    <div class="align-items-center align-content-center">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.Date, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                                @Html.TextBoxFor(m => m.Date, new { @value = DateTime.Now, @readonly = "readonly", @visibility="hidden" })
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.UserId, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                                @Html.TextBoxFor(m => m.UserId, new { @value = ViewBag.user, @readonly = "readonly", @visibility = "hidden" })
+                                            </div>
+                                        </div>
                                         <div class="form-group">
 
                                             @Html.Label("Title", "Titlu", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
@@ -69,22 +82,22 @@
 
                                                     <div class="col-md-10 d-flex flex-row align-items-center mb-4">
 
-                                                        <button class="btn btn-sm btn-success" type="submit">
+                                                        <button class="btn btn-sm btn-outline-success" type="submit">
                                                             Adauga Intrarea de Jurnal
                                                         </button>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        </div>
-                                    }
-                               
+                                    </div>
+                                }
+
                                 @*<div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="https://media.istockphoto.com/vectors/red-pin-location-with-hospital-icon-inside-vector-illustration-vector-id1394152100?b=1&k=20&m=1394152100&s=170667a&w=0&h=JHQDCuZwi_wVy6c1h5t5kCwsu8Q81vNk_9B7OaZy3V0="
-                                         class="img-fluid" alt="Sample image" />
+                                        <img src="https://media.istockphoto.com/vectors/red-pin-location-with-hospital-icon-inside-vector-illustration-vector-id1394152100?b=1&k=20&m=1394152100&s=170667a&w=0&h=JHQDCuZwi_wVy6c1h5t5kCwsu8Q81vNk_9B7OaZy3V0="
+                                             class="img-fluid" alt="Sample image" />
 
-                                </div>*@
+                                    </div>*@
 
 
                             </div>
