--- a/Views/Locations/New.cshtml
+++ b/Views/Locations/New.cshtml
@@ -22,6 +22,7 @@
                                     @using (Html.BeginForm(actionName: "New", controllerName: "Locations"))
                                     {
 
+                                        @Html.ValidationSummary("", new { @class = "text-danger" })
                                         <div class="form-group">
 
                                             @Html.Label("City", "Nume oras", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
