--- a/Views/Locations/Show.cshtml
+++ b/Views/Locations/Show.cshtml
@@ -16,10 +16,10 @@
                 Afisare lista locatii si departamente
             
         </a>
-        <form method="post" action="/Locations/Delete/@ViewBag.LocationId">
+        @*<form method="post" action="/Locations/Delete/@ViewBag.LocationId">
             @Html.HttpMethodOverride(HttpVerbs.Delete)
             <button type="submit" class="btn btn-outline-danger">Sterge Locatie</button>
-        </form>
+        </form>*@
         <hr />
         <a href="/Locations/New" type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">Adauga locatie</a>
 
