--- a/Views/Locations/Show.cshtml
+++ b/Views/Locations/Show.cshtml
@@ -13,7 +13,7 @@
     {
         <a href="/Locations/Edit/@ViewBag.Location.LocationId" type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
            
-                Afisare lista locatii si departamente
+                Editeaza locatia
             
         </a>
         @*<form method="post" action="/Locations/Delete/@ViewBag.LocationId">
