--- a/Views/LocationDepartments/New.cshtml
+++ b/Views/LocationDepartments/New.cshtml
@@ -21,10 +21,10 @@
                                     {
                                         @Html.ValidationSummary("", new { @class = "text-danger" })
 
-                                        @Html.DropDownListFor(m => m.LocationId, new SelectList(Model.Locations, "Value", "Text"), "Selectati Locatia", new { @class = "form - control" })
+                                        @Html.DropDownListFor(m => m.LocationId, new SelectList(Model.Locations, "Value", "Text", Model.Locations.First()), null, new { @class = "form - control" })
                                         <br />
                                         <br />
-                                        @Html.DropDownListFor(m => m.DepartmentId, new SelectList(Model.Departments, "Value", "Text"), "Selectati Departamentul", new { @class = "form - control" })
+                                        @Html.DropDownListFor(m => m.DepartmentId, new SelectList(Model.Departments, "Value", "Text", Model.Departments.First()), null, new { @class = "form - control" })
                                         <br />
                                         <br />
                                         <div class="form-group">
