--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,9 +73,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Doctors/Edit">Editeaza Profilul</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" href="/Doctors/Show/@ViewBag.docId">Arata profilul</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link" href="/Appointments/Index">Programari</a>
                         </li>
