--- a/Views/Users/Show.cshtml
+++ b/Views/Users/Show.cshtml
@@ -3,19 +3,58 @@
     ViewBag.Title = "Show";
 }
 
-<h2>Show</h2>
 
-<div class="panel panel-default">
-    <div class="panel-heading"><strong>@ViewBag.UserName</strong></div>
-    <div class="panel-body">
-        <br />
-        @ViewBag.User.Email
-        <br />
-        <div>Rol: <strong>@ViewBag.roleName</strong></div>
-        <br />
+<body class="vh-100" style="background-color: #eee;">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-lg-6 mb-4 mb-lg-0">
+                <div class="card mb-3" style="border-radius: .5rem;">
+                    <div class="row g-0">
+                        <div class="col-md-4 gradient-custom text-center text-black"
+                             style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+                            <br />
+                            <br />
+                            <br />
+                            <br />
+                            <h5>@ViewBag.User.LastName</h5>
+                            <h5>@ViewBag.User.FirstName</h5>
+                            <p>@ViewBag.User.Description</p>
+                            <i class="far fa-edit mb-5"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body p-4">
+                                <h6>Informatii</h6>
+                                <hr class="mt-0 mb-4">
+                                <div class="row pt-1">
+                                    <div class="col-6 mb-3">
+                                        <h6>Email:</h6>
+                                        <p class="text-muted">@ViewBag.User.Email</p>
+                                    </div>
+                                    <div class="col-6 mb-3">
+                                        <h6>Telefon:</h6>
+                                        <p class="text-muted">@ViewBag.User.PhoneNumber</p>
+                                    </div>
+                                </div>
+                                <h6>Rol curent:</h6>
+                                <hr class="mt-0 mb-4">
+                                <div class="row pt-1">
+                                    <div class="col-6 mb-3">
+                                        
+                                        <p class="text-muted">@ViewBag.roleName</p>
+                                    </div>
+                                    <div class="col-6 mb-3">
+                                        <a class="btn btn-sm btn-outline-dark" href="/Users/Index"> Inapoi </a>
+                                    </div>
+                                </div>
 
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="panel-footer">
-        <a class="btn btn-sm btn-success" href="/Users/Index"> Inapoi la lista de utilizatori</a>
-    </div>
-</div>
+</body>
+
+
