--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
                             <a class="nav-link" href="/LocationDepartments/Index">Locatii si departamente</a>
                         </li>
                         @*<li class="nav-item">
-                            <a class="nav-link" href="/Departments/Index">Departamente</a>
-                        </li>*@
+                <a class="nav-link" href="/Departments/Index">Departamente</a>
+            </li>*@
                         <li class="nav-item">
                             <a class="nav-link" href="/Doctors/Index">Doctori</a>
                         </li>
@@ -44,6 +44,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Appointments/Index">Programarile mele</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Users/Index">Profil</a>
                         </li>
                     }
                     @if (User.IsInRole("Administrator"))
@@ -74,8 +77,8 @@
                             <a class="nav-link" href="/Doctors/Edit">Editeaza Profilul</a>
                         </li>
                         @*<li class="nav-item">
-                            <a class="nav-link" href="/Doctors/Show/@ViewBag.docId">Arata profilul</a>
-                        </li>*@
+                <a class="nav-link" href="/Doctors/Show/@ViewBag.docId">Arata profilul</a>
+            </li>*@
                         <li class="nav-item">
                             <a class="nav-link" href="/Appointments/Index">Programari</a>
                         </li>
