--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -29,6 +29,31 @@
                                             </div>
                                         </div>
 
+                                        <div class="form-group">
+
+                                            @Html.Label("LastName", "Nume", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+
+
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+
+                                            @Html.Label("FirstName", "Prenume", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+
+
+                                            </div>
+                                        </div>
 
 
                                         <div class="form-group">
@@ -55,14 +80,38 @@
                                             </div>
 
                                         </div>
-
                                         <div class="form-group">
-                                            <i class="glyphicon glyphicon-th-list"></i>
-                                            <label>Selectati rolul</label>
-                                            @Html.DropDownList("newRole", new SelectList(@Model.AllRoles, "Value", "Text", ViewBag.userRole), null, new { @class = "form-control" })
+
+
+                                            @Html.Label("Description", "Descriere", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                                @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
+                                            </div>
+
                                         </div>
-                                        <br />     
-                                        
+                                        if (User.IsInRole("Administrator"))
+                                        {
+                                            <div class="form-group">
+                                                <i class="glyphicon glyphicon-th-list"></i>
+                                                <label>Selectati rolul</label>
+                                                @Html.DropDownList("newRole", new SelectList(@Model.AllRoles, "Value", "Text", ViewBag.userRole), null, new { @class = "form-control" })
+                                            </div>
+                                            <br />
+                                        }
+                                        else
+                                        {
+                                            <div class="form-group">
+                                                <i class="glyphicon glyphicon-th-list"></i>
+                                                <label>Selectati rolul</label>
+                                                @Html.DropDownList("newRole", new SelectList(@Model.AllRoles, "Value", "Text", ViewBag.userRole), null, new { @class = "form-control" })
+                                            </div>
+                                            <br />
+
+                                        }
+
+
                                         <div class="form-group">
                                             <div class="row mb-4">
                                                 <div class="col d-flex justify-content-center">
