--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -8,19 +8,23 @@
 
     <section class="vh-100">
         <div class="container h-100 align-content-center align-items-center" style="border-radius: 15px;">
-            <br />
-            <br />
-            <h3 class="text-center">Afisare utilizatori</h3>
-            <br />
-            <br />
+        <br />
+        <br />
+        <h3 class="text-center">Afisare utilizatori</h3>
+        <p class="text-danger">@ViewBag.message</p>
+        <br />
+        <br />
 
-            <ul class="list-group list-group-light align-content-center align-items-center " style="border-radius: 15px;">
-                
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    
-                    <div class="row align-content-center align-items-center">
+        <ul class="list-group list-group-light align-content-center align-items-center " style="border-radius: 15px;">
 
-                        @foreach (var user in ViewBag.UsersList)
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+
+                <div class="row align-content-center align-items-center">
+                    @if (ViewBag.UsersListCount > 1)
+                    {
+
+
+                        foreach (var user in ViewBag.UsersList)
                         {
                             <div class="col-xl-6 col-lg-4  mb-4 ">
 
@@ -65,13 +69,61 @@
 
 
                         }
+                    }
+                    else
+                    {
+                        foreach (var user in ViewBag.UsersList)
+                        {
+                            
+
+                                <div class="card ">
+
+                                    <div class="card-body" style="background-color: #ffcccc">
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="d-flex align-items-center">
+                                                <div class="ms-3">
+                                                    <p class="fw-bold mb-1">@user.UserName</p>
+                                                    <p class="text-muted mb-0">@user.Email</p>
+                                                </div>
+                                            </div>
+                                            <span class="badge rounded-pill badge-success"></span>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
+                                        <a class="btn btn-link m-0 text-reset"
+                                           href="/Users/Edit/@user.Id"
+                                           role="button"
+                                           data-ripple-color="primary">
+                                            <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                                                Editeaza
+                                            </button>
+                                        </a>
+                                        <a class="btn btn-link m-0 text-reset"
+                                           href="/Users/Show/@user.Id"
+                                           role="button"
+                                           data-ripple-color="primary">
+                                            <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                                                Arata
+                                            </button>
+                                        </a>
 
 
-                    </div>
-                </li>
-</div>
-            </ul>
-        </div>
+
+                                    </div>
+
+                                </div>
+
+                          
+
+
+                        }
+                    }
+
+                </div>
+            </li>
+
+        </ul>
+            </div>
     </section>
 
 </body>
